# dwarf_copier

./: .gitignore  README.md  TODO.md  dwarf-copy.yml  pyproject.toml  tox.ini
.github/workflows/: poetry.yml
dwarf_copier/: __init__.py  app.py  config.py  configuration.py  dwarf-copy.css  dwarf-copy.yml  help-text.md  model.py  shots_info.py  source_directory.py
dwarf_copier/drivers/: __init__.py  disk.py
dwarf_copier/models/: destination_directory.py  source_directory.py
dwarf_copier/screens/: TODO.md  __init__.py  copy_files.py  dashboard.py  help.py  pre_copy.py  quit.py  session_list.py  settings.py  show_sessions.py  source_target.py
dwarf_copier/widgets/: __init__.py  copier.py  prev_next.py  session_summary.py  sortable_table.py
tests/: conftest.py  test_app.py  test_config.py  test_copy_files.py  test_driver_disk.py  test_shots.py  test_special_files.py  test_state.py  test_user.py
tests/data/Astronomy/DWARF_RAW_EXP_5_GAIN_60_2024-02-24-22-31-52-161/: shotsInfo.json
tests/data/Astronomy/DWARF_RAW_M1_EXP_15_GAIN_80_2024-01-18-21-04-26-954/: shotsInfo.json
tests/data/Astronomy/DWARF_RAW_M43_EXP_5_GAIN_60_2024-01-22-19-04-10-409/: shotsInfo.json
tests/data/Astronomy/DWARF_RAW_Moon_EXP_0.0025_GAIN_0_2024-01-16-15-02-35-270/: shotsInfo.json
